<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddReminderActivity">

    <TimePicker
        android:id="@+id/ara_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ara_display_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/ara_default_display_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ara_time_picker" />

    <ImageView
        android:id="@+id/ara_iv_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/ara_select_date_description"
        android:src="@drawable/calendar_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ara_time_picker" />

    <EditText
        android:id="@+id/ara_et_reminder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="Rise and Shine!, Sleeping Time!"
        android:hint="@string/ara_hint_reminder_name"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ara_iv_calendar" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ara_sc_recurring_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/ara_switch_repeat_reminder"
        app:layout_constraintBottom_toTopOf="@+id/ara_cl_recurrence_delay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ara_et_reminder_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ara_cl_recurrence_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/ara_sc_recurring_reminder">

        <TextView
            android:id="@+id/ara_tv_every"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ara_label_every"
            app:layout_constraintBottom_toTopOf="@id/ara_hz_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ara_et_recurrence_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="1,2,3,4"
            android:hint="@string/ara_repetition_delay"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/ara_hz_divider"
            app:layout_constraintEnd_toStartOf="@+id/ara_sn_recurrence_type"
            app:layout_constraintStart_toEndOf="@id/ara_tv_every"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/ara_sn_recurrence_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="a,b,c"
            app:layout_constraintBottom_toTopOf="@id/ara_hz_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ara_et_recurrence_number" />

        <View
            android:id="@+id/ara_hz_divider"
            style="@style/Divider"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ara_et_recurrence_number" />


        <TextView
            android:id="@+id/ara_tv_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ara_date_default"
            app:layout_constraintBottom_toTopOf="@+id/ara_tv_end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ara_hz_divider" />

        <ImageView
            android:id="@+id/ara_iv_start_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/ara_select_date_description"
            android:src="@drawable/calendar_icon"
            app:layout_constraintStart_toEndOf="@+id/ara_tv_start_date"
            app:layout_constraintTop_toBottomOf="@+id/ara_hz_divider" />

        <TextView
            android:id="@+id/ara_tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ara_time_default"
            app:layout_constraintBottom_toTopOf="@+id/ara_tv_end_time"
            app:layout_constraintEnd_toStartOf="@+id/ara_iv_start_clock"
            app:layout_constraintTop_toBottomOf="@+id/ara_hz_divider" />

        <ImageView
            android:id="@+id/ara_iv_start_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/ara_select_date_description"
            android:src="@drawable/clock_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ara_hz_divider" />

        <TextView
            android:id="@+id/ara_tv_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ara_date_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ara_tv_start_date" />

        <ImageView
            android:id="@+id/ara_iv_end_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/ara_select_date_description"
            android:src="@drawable/calendar_icon"
            app:layout_constraintStart_toEndOf="@+id/ara_tv_end_date"
            app:layout_constraintTop_toBottomOf="@+id/ara_iv_start_calendar" />

        <TextView
            android:id="@+id/ara_tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ara_time_default"
            app:layout_constraintEnd_toStartOf="@id/ara_iv_end_clock"
            app:layout_constraintTop_toBottomOf="@+id/ara_tv_start_time" />

        <ImageView
            android:id="@+id/ara_iv_end_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/ara_select_date_description"
            android:src="@drawable/clock_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ara_iv_start_clock" />

        <Button
            android:id="@+id/aaa_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/aaa_button_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/aaa_button_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ara_tv_end_date" />

        <Button
            android:id="@+id/aaa_button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/aaa_button_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aaa_button_add"
            app:layout_constraintTop_toBottomOf="@+id/ara_tv_end_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>